cmake_minimum_required(VERSION 3.22)
project(third)

set(CMAKE_CXX_STANDARD 14)

add_executable(third
        main.cpp
        InsertSort.h
        SelectSort.h
        Bubble.h
        shell.h
        Mergesort.h
        QuickSort.h
        utils.h
        HeapSort.h
        Heap.h
        RadixSort.h
        )
